--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
   "author": "Marcelo Cardoso <marcelovicentegc@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf build && tsc"
+    "build": "rimraf build && tsc",
+    "start": "yarn build && node build/index.js",
+    "start:expose": "lt --port 8000"
   },
   "dependencies": {
     "@octokit/rest": "^18.5.2",
     "@slack/events-api": "^3.0.0",
     "@slack/web-api": "^6.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jira-connector": "^3.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "localtunnel": "^2.0.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
