--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jira-connector": "^3.1.0"
+    "jira.js": "^2.0.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
