--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "octosync",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "main": "index.js",
   "author": "Marcelo Cardoso <marcelovicentegc@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "rimraf build && tsc",
-    "start": "yarn build && node build/index.js",
+    "start:watch": "rimraf build && tsc --watch",
+    "start": "concurrently \"yarn start:watch\" \"nodemon -r dotenv/config build/index.js\"",
     "start:expose": "lt --port 8000"
   },
   "dependencies": {
     "@octokit/rest": "^18.5.2",
     "@slack/events-api": "^3.0.0",
     "@slack/web-api": "^6.1.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jira.js": "^2.0.6"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "concurrently": "^6.0.1",
     "localtunnel": "^2.0.1",
+    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
