--- a/github/workflows/build.yml
+++ b/github/workflows/build.yml
@@ -1,10 +1,12 @@
 name: Build
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
-      - "**"
-      - "!main"
+      - main
 
 jobs:
   build:
