--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ GITHUB_ORGANIZATION=
 GITHUB_REPOSITORY=
 JIRA_HOST=
 JIRA_ISSUER_EMAIL=
-JIRA_PROJECT=KON
+JIRA_PROJECT=
 JIRA_PROJECT_ID=
-JIRA_API_KEY=
+JIRA_API_TOKEN=
 JIRA_DONE_TRANSITION_ID=
+JIRA_DONE_STATUS_NAME=
+JIRA_CUSTOM_GITHUB_REPOSITORY_FIELD=
+JIRA_CUSTOM_GITHUB_ISSUE_NUMBER_FIELD=
