--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build:
+    if: "! contains(toJSON(github.event.commits.*.message), '[skip-build]')"
     runs-on: ubuntu-latest
 
     strategy:
