--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^6.0.1",
     "localtunnel": "^2.0.1",
     "nodemon": "^2.0.7",
+    "release-it": "^14.6.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
