--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf build && tsc",
     "start:watch": "rimraf build && tsc --watch",
     "start": "concurrently \"yarn start:watch\" \"nodemon -r dotenv/config build/index.js\"",
-    "start:expose": "lt --port 8000"
+    "start:expose": "lt --port 8000",
+    "release": "release-it"
   },
   "dependencies": {
     "@octokit/rest": "^18.5.2",
