--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "octosync",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "main": "index.js",
   "author": "Marcelo Cardoso <marcelovicentegc@gmail.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "rimraf build && tsc",
     "start:watch": "rimraf build && tsc --watch",
     "start": "concurrently \"yarn start:watch\" \"nodemon -r dotenv/config build/index.js\"",
     "start:expose": "lt --port 8000",
-    "release": "release-it"
+    "semantic-release": "semantic-release",
+    "semantic-release:dry-run": "semantic-release --dry-run"
   },
   "dependencies": {
     "@octokit/rest": "^18.5.2",
@@ -21,15 +23,23 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@semantic-release/github": "^7.2.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
     "concurrently": "^6.0.1",
     "localtunnel": "^2.0.1",
     "nodemon": "^2.0.7",
-    "release-it": "^14.6.1",
     "rimraf": "^3.0.2",
+    "semantic-release": "^17.4.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marcelovicentegc/octosync.git"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
