--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -50,7 +50,7 @@ jobs:
   push_to_registry:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip-deploy]')"
     name: Push Docker image to GitHub Packages
-    depends-on: build
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
