chore(cd): remove duplicate steps

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -12,11 +12,9 @@ jobs:
   build:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip-build]')"
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [12.x, 14.x]
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
@@ -53,7 +51,7 @@ jobs:
   push_to_registry:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip-deploy]')"
     runs-on: ubuntu-latest
-    steps:
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - name: Build image
