--- a/package.json
+++ b/package.json
@@ -5,31 +5,49 @@
   "author": "Marcelo Cardoso <marcelovicentegc@gmail.com>",
   "license": "MIT",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "rimraf build && tsc",
-    "start:watch": "rimraf build && tsc --watch",
-    "start": "concurrently \"yarn start:watch\" \"nodemon -r dotenv/config build/index.js\"",
+    "lerna": "lerna",
+    "build": "lerna bootstrap && lerna run build",
+    "start:webhooks": "yarn workspace @octosync/webhooks start",
+    "start:bot": "yarn workspace @octosync/bot start",
     "start:expose": "lt --port 8000",
     "semantic-release": "semantic-release",
-    "semantic-release:dry-run": "semantic-release --dry-run"
+    "semantic-release:dry-run": "semantic-release --dry-run",
+    "publish": "lerna publish from-package",
+    "commitmsg": "commitlint -e $GIT_PARAMS"
   },
   "dependencies": {
     "@octokit/rest": "^18.5.2",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "probot": "^11.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@semantic-release/github": "^7.2.1",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.14.37",
+    "commitizen": "^4.2.4",
     "concurrently": "^6.0.1",
+    "cz-lerna-changelog": "^2.0.3",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lerna": "^4.0.0",
     "localtunnel": "^2.0.1",
+    "nock": "^13.0.5",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.2",
+    "smee-client": "^1.2.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
