--- a/packages/handlers/package.json
+++ b/packages/handlers/package.json
@@ -11,8 +11,8 @@
     "octosync"
   ],
   "dependencies": {
-    "@octosync/utils": "^0.0.0",
-    "@octosync/clients": "^0.0.0"
+    "@octosync/clients": "^0.0.0",
+    "@octosync/utils": "^0.0.0"
   },
   "scripts": {
     "build": "rimraf build && tsc",
@@ -21,5 +21,8 @@
   },
   "engines": {
     "node": ">= 10.13.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
