--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lerna": "lerna",
     "build": "lerna bootstrap && lerna run build",
     "start:webhooks": "yarn workspace @octosync/webhooks start",
+    "start:webhooks:prod": "yarn workspace @octosync/webhooks start:prod",
     "start:bot": "yarn workspace @octosync/bot start",
     "start:expose": "lt --port 8000",
     "semantic-release": "semantic-release",
@@ -25,7 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "probot": "^11.0.1"
+    "probot": "^11.0.1",
+    "lerna": "^4.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
@@ -40,7 +42,6 @@
     "cz-lerna-changelog": "^2.0.3",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "lerna": "^4.0.0",
     "localtunnel": "^2.0.1",
     "nock": "^13.0.5",
     "nodemon": "^2.0.7",
