--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -13,8 +13,8 @@
     "octosync"
   ],
   "dependencies": {
-    "@octosync/handlers": "^0.0.0",
-    "@octosync/utils": "^0.0.0"
+    "@octosync/handlers": "*",
+    "@octosync/utils": "*"
   },
   "scripts": {
     "build": "rimraf build && tsc",
