--- a/packages/handlers/package.json
+++ b/packages/handlers/package.json
@@ -11,8 +11,8 @@
     "octosync"
   ],
   "dependencies": {
-    "@octosync/clients": "^0.0.0",
-    "@octosync/utils": "^0.0.0"
+    "@octosync/clients": "*",
+    "@octosync/utils": "*"
   },
   "scripts": {
     "build": "rimraf build && tsc",
