--- a/packages/clients/package.json
+++ b/packages/clients/package.json
@@ -11,7 +11,7 @@
     "octosync"
   ],
   "dependencies": {
-    "@octosync/utils": "*"
+    "@octosync/utils": "^0.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37"
