--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -10,9 +10,9 @@
     "octosync"
   ],
   "dependencies": {
-    "@octosync/utils": "*",
-    "@octosync/handlers": "*",
-    "@octosync/clients": "*"
+    "@octosync/utils": "^0.0.0",
+    "@octosync/handlers": "^0.0.0",
+    "@octosync/clients": "^0.0.0"
   },
   "scripts": {
     "build": "rimraf build && tsc",
